--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -3,26 +3,13 @@
     - task.errors.full_messages.each do |message|
       li= message
 
-= form_with model: [:admin, user], local: true do |f|
+= form_with model: task, local: true do |f|
+  .form-group
+    =f.label :name
+    =f.text_field :name, class: "form-control", id: "task_name"
 
   .form-group
-    = f.label :name, "名前"
-    = f.text_field :name, class: "form-control"
+    =f.label :description
+    =f.text_area :description, rows: 5, class: "form-control", id: "task_description"
 
-  .form-group
-    = f.label :email, "メールアドレス"
-    = f.text_field :email, class: "form-control"
-
-  .form-check
-    = f.label :admin, class: "form-check-label" do
-      = f.check_box :admin, class: "form-check-input"
-      |　管理者権限
-  .form-group
-    = f.label :password, "パスワード"
-    = f.text_field :password, class: "form-control"
-
-  .form-group
-    = f.label :password_confirmation, "パスワード確認用"
-    = f.text_field :password_confirmation, class: "form-control"
-
-  = f.submit "登録する", class: "btn btn-primary"
+  = f.submit nil, class: "btn btn-primary"
