--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -12,4 +12,8 @@
     =f.label :description
     =f.text_area :description, rows: 5, class: "form-control", id: "task_description"
 
+  .form-group
+    = f.label :image
+    = f.file_field :image, rows: 5, class: "form-control", id: "task_description"
+
   = f.submit nil, class: "btn btn-primary"
