--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -1,6 +1,6 @@
 h1 タスク一覧
 
-= search_form_for @q, class: "mb-5" do |f|
+= search_form_for @query, class: "mb-5" do |f|
   .form-group.row
     = f.label :name_cont, "名称", class: "col-sm-2 col-form-label"
   .col-sm-10
@@ -22,7 +22,7 @@ h1 タスク一覧
 table.table.table-hover
   thead.thead-default
     tr
-      th= sort_link(@q, :name, [:name, "created_at desc"])
+      th= sort_link(@query, :name, [:name, "created_at desc"])
       th= Task.human_attribute_name(:created_at)
       th
   tbody
